# CMR

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configurations/: eval_config.yaml  train_config.yaml
configurations_carve/: apibench.yaml  eval_config.yaml  joint_training_config.yaml  mllm_onwards.yaml
core/: __init__.py
core/baselines/: README.md  __init__.py  eval_continual.py  main.py  openmodel.py  retrievers_accuracy.py  train_loop.py
core/baselines/HuggingGPTstyle/: README.md  eval_huggingQ.py  huggingQ.py
core/baselines/utils/: configs.py  eval_utility.py  (+6 more)
core/carve/: __init__.py  eval_carve.py  eval_router.py  main_carve.py  openmodel_carve.py  train_loop_carve.py
data/: README.md  generate_model_indices.py  process_data.py
data/model_indices/: e1.json  e1_e2.json  e1_e2_e3.json  e1_e2_e3_e4.json
data/processed/: .gitkeep  cleaned-apibench-hf-eval.json  cleaned-apibench-hf-val.json  cleaned-hugging-bench-1-eval.json  cleaned-hugging-bench-1-val.json  cleaned-hugging-bench-2-eval.json  cleaned-hugging-bench-2-val.json  cleaned-mllm-eval.json  cleaned-mllm-val.json  hugging-bench-domains.json
data/utils/: apibench_hf.py  hugging_bench.py  mllm.py  utility.py
self-instruct/: README.md  requirements.txt
self-instruct/code/: step_1_download_model_hub.ipynb  step_2_download_model_hub_legacy_models.ipynb  step_3_clean_model_cards.py  step_4_manual_cleaning_model_cards.ipynb  step_5_self_instruct.py  step_6_manual_cleaning_prompts_self_instruct.ipynb  step_7_create_exp_3_4.ipynb
self-instruct/data/: system_prompts.py  tasks
(+44 files in other folders)
