[project]
name = "CMR"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.7"
dependencies = [
    "bitsandbytes>=0.48.1",
    "chromadb>=1.1.0",
    "datasets>=4.1.1",
    "faiss-cpu>=1.12.0",
    "flagembedding>=1.3.5",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.35.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.2",
    "peft==0.17.0",
    "pip>=25.3",
    "python-levenshtein>=0.27.1",
    "pytz>=2025.2",
    "rank-bm25>=0.2.2",
    "scikit-optimize>=0.10.2",
    "sentence-transformers>=5.1.1",
    "setuptools>=79.0.1",
    "torch==2.8.0",
    "tqdm>=4.67.1",
    "transformers==4.57.6",
    "trl==0.27.0",
    "wandb>=0.22.2",
]

[project.optional-dependencies]
gpu = [
    "flash-attn>=2.8.3",
]

[project.scripts]
train-baseline = "core.baselines.main:main"
train-carve = "core.carve.main_carve:main"
eval-baseline = "core.baselines.eval_continual:main"
eval-carve = "core.carve.eval_carve:main"
process-data = "data.process_data:main"

[tool.setuptools.packages.find]
include = ["core*", "data*"]
exclude = ["notebooks*", "*.egg-info", "*.pyc", "*.md", "*.txt", "*.sh"]



